Add systemd unit to release
Signed-off-by: Kevin Fox <Kevin.Fox@pnnl.gov>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,6 +33,10 @@ archives:
       - goos: windows
         format: zip
 
+release:
+  extra_files:
+    - glob: ./systemd/*
+
 changelog:
   sort: asc
   filters:
