--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -32,10 +32,8 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-
-release:
-  extra_files:
-    - glob: ./systemd/*
+    files:
+      - systemd/*
 
 changelog:
   sort: asc
