Add the k8s oidc discovery service bits
Signed-off-by: Kevin Fox <Kevin.Fox@pnnl.gov>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -34,8 +34,10 @@ archives:
         format: zip
     files:
       - systemd/*
-      - config/k8s-spiffe-workload-auth-config.env
       - config/auth-config.yaml
+      - config/k8s-spiffe-workload-auth-config.env
+      - config/k8s-spiffe-oidc-discovery-provider.conf
+      - config/k8s-spiffe-oidc-discovery-provider-helper.conf
       - LICENSE
       - README.md
 
